// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Games API > should parse a list response 1`] = `
[
  {
    "id": 314,
    "lastUpdate": "2013-11-11T00:00:00Z",
    "name": "The uninvited guest",
    "numLikes": 2,
  },
  {
    "id": 317,
    "lastUpdate": "2013-03-13T00:00:00Z",
    "name": "Cromexx Funhouse for NWN 1",
    "numLikes": 1,
  },
  {
    "id": 66,
    "lastUpdate": "2013-01-12T00:00:00Z",
    "name": "Vampire Fate",
    "numLikes": 41,
  },
]
`;

exports[`Games API > should parse a viewgame response 1`] = `
{
  "adultThemes": [
    {
      "abbreviation": "MF",
      "id": 33,
      "name": "Male/Female",
    },
    {
      "abbreviation": "FF",
      "id": 34,
      "name": "Female/Female",
    },
    {
      "abbreviation": "MM",
      "id": 35,
      "name": "Male/Male",
    },
    {
      "abbreviation": "F-Self",
      "id": 37,
      "name": "Female Masturbation",
    },
    {
      "abbreviation": "M-Self",
      "id": 36,
      "name": "Male Masturbation",
    },
    {
      "abbreviation": "Sub",
      "id": 41,
      "name": "Submission",
    },
    {
      "abbreviation": "Dom",
      "id": 42,
      "name": "Domination",
    },
  ],
  "authors": [
    {
      "id": 38045,
      "name": "Deedee",
    },
    {
      "id": 51960,
      "name": "psy",
    },
  ],
  "id": 1445,
  "lastUpdate": "2024-05-12T00:00:00Z",
  "multimediaThemes": [
    {
      "abbreviation": "2-D",
      "id": 24,
      "name": "2-D Graphics",
    },
    {
      "abbreviation": "Rend",
      "id": 26,
      "name": "3-D Renders",
    },
    {
      "abbreviation": "Draw",
      "id": 27,
      "name": "Drawings",
    },
    {
      "abbreviation": "SFX",
      "id": 30,
      "name": "Sound Effects",
    },
    {
      "abbreviation": "Video",
      "id": 31,
      "name": "Video",
    },
  ],
  "name": "Secretary",
  "numLikes": 4350,
  "releaseDate": "2017-10-01T22:57:00Z",
  "transformationThemes": [
    {
      "abbreviation": "BE",
      "id": 4,
      "name": "Breast Enlargement",
    },
    {
      "abbreviation": "Grow",
      "id": 7,
      "name": "Growth/Expansion",
    },
    {
      "abbreviation": "Invol",
      "id": 8,
      "name": "Involuntary",
    },
    {
      "abbreviation": "M2F",
      "id": 9,
      "name": "Male to Female (Genital Changes)",
    },
    {
      "abbreviation": "Fem",
      "id": 45,
      "name": "Feminization",
    },
    {
      "abbreviation": "Slow",
      "id": 40,
      "name": "Slow Transformation",
    },
    {
      "abbreviation": "MC",
      "id": 10,
      "name": "Mental Changes",
    },
    {
      "abbreviation": "Bimbo",
      "id": 15,
      "name": "Bimbo",
    },
    {
      "abbreviation": "Herm",
      "id": 16,
      "name": "Hermaphrodite",
    },
    {
      "abbreviation": "Corr",
      "id": 39,
      "name": "Corruption",
    },
    {
      "abbreviation": "SheM",
      "id": 19,
      "name": "Shemale",
    },
    {
      "abbreviation": "Vol",
      "id": 23,
      "name": "Voluntary",
    },
    {
      "abbreviation": "Sissy",
      "id": 44,
      "name": "Sissification",
    },
  ],
  "versions": [
    {
      "downloads": [
        {
          "link": "https://www.mediafire.com/file/hl1azwap3l1xy5x/secretary1013.rar/file",
          "name": "mediafire.com",
          "note": "MediaFire",
        },
        {
          "link": "https://mega.nz/file/sOJzXLYT#V00E8-ZClD9Ej9G7Oloavt41F8NJQ_0GQm2ppvdXUxo",
          "name": "mega.nz",
          "note": "Mega",
        },
      ],
      "version": "1.0.1.3",
    },
    {
      "downloads": [
        {
          "link": "https://www.mediafire.com/file/rwlg3u68598r1hb/secretary1005.rar/file",
          "name": "mediafire.com",
          "note": "MediaFire",
        },
        {
          "link": "https://mega.nz/file/xbQWjQRD#yxVeWBth7AzAeX03h6GJ6_ptd7j8mEsAdQZb1Mf_UW4",
          "name": "mega.nz",
          "note": "Mega",
        },
      ],
      "version": "1.0.0.5",
    },
  ],
}
`;

exports[`Games API > should parse a viewgame response 2 1`] = `
{
  "adultThemes": [
    {
      "abbreviation": "MF",
      "id": 33,
      "name": "Male/Female",
    },
    {
      "abbreviation": "MM",
      "id": 35,
      "name": "Male/Male",
    },
    {
      "abbreviation": "Other",
      "id": 38,
      "name": "Other",
    },
  ],
  "authors": [
    {
      "id": 160407,
      "name": "MariaMod",
    },
  ],
  "id": 3227,
  "lastUpdate": "2024-06-14T00:00:00Z",
  "multimediaThemes": [
    {
      "abbreviation": "2-D",
      "id": 24,
      "name": "2-D Graphics",
    },
    {
      "abbreviation": "Draw",
      "id": 27,
      "name": "Drawings",
    },
  ],
  "name": "S.L.A.T. Foundation",
  "numLikes": 139,
  "releaseDate": "2024-03-17T00:00:00Z",
  "transformationThemes": [
    {
      "abbreviation": "BE",
      "id": 4,
      "name": "Breast Enlargement",
    },
    {
      "abbreviation": "M2F",
      "id": 9,
      "name": "Male to Female (Genital Changes)",
    },
    {
      "abbreviation": "Fem",
      "id": 45,
      "name": "Feminization",
    },
    {
      "abbreviation": "MC",
      "id": 10,
      "name": "Mental Changes",
    },
    {
      "abbreviation": "Poss",
      "id": 12,
      "name": "Possession",
    },
    {
      "abbreviation": "Shrink",
      "id": 14,
      "name": "Shrinking",
    },
    {
      "abbreviation": "Corr",
      "id": 39,
      "name": "Corruption",
    },
    {
      "abbreviation": "SheM",
      "id": 19,
      "name": "Shemale",
    },
    {
      "abbreviation": "Vol",
      "id": 23,
      "name": "Voluntary",
    },
    {
      "abbreviation": "Sissy",
      "id": 44,
      "name": "Sissification",
    },
  ],
  "versions": [
    {
      "downloads": [
        {
          "link": "https://MilkyNail.site/slat.zip",
          "name": "milkynail.site",
          "note": "Online/Offline version with pics",
        },
      ],
      "version": "All versions",
    },
  ],
}
`;

exports[`Games API > should parse a viewgame response 3 1`] = `
{
  "adultThemes": [
    {
      "abbreviation": "MF",
      "id": 33,
      "name": "Male/Female",
    },
    {
      "abbreviation": "MM",
      "id": 35,
      "name": "Male/Male",
    },
    {
      "abbreviation": "M-Self",
      "id": 36,
      "name": "Male Masturbation",
    },
    {
      "abbreviation": "Sub",
      "id": 41,
      "name": "Submission",
    },
    {
      "abbreviation": "Dom",
      "id": 42,
      "name": "Domination",
    },
    {
      "abbreviation": "Other",
      "id": 38,
      "name": "Other",
    },
  ],
  "authors": [
    {
      "id": 142702,
      "name": "gabysissy",
    },
  ],
  "id": 3120,
  "lastUpdate": "2024-09-02T00:00:00Z",
  "multimediaThemes": [
    {
      "abbreviation": "Photo",
      "id": 29,
      "name": "Photographs",
    },
    {
      "abbreviation": "Video",
      "id": 31,
      "name": "Video",
    },
  ],
  "name": "Disruption",
  "numLikes": 287,
  "releaseDate": "2023-10-19T00:00:00Z",
  "transformationThemes": [
    {
      "abbreviation": "Invol",
      "id": 8,
      "name": "Involuntary",
    },
    {
      "abbreviation": "Fem",
      "id": 45,
      "name": "Feminization",
    },
    {
      "abbreviation": "Masc",
      "id": 47,
      "name": "Masculinization",
    },
    {
      "abbreviation": "MC",
      "id": 10,
      "name": "Mental Changes",
    },
    {
      "abbreviation": "Corr",
      "id": 39,
      "name": "Corruption",
    },
    {
      "abbreviation": "SheM",
      "id": 19,
      "name": "Shemale",
    },
    {
      "abbreviation": "Sissy",
      "id": 44,
      "name": "Sissification",
    },
  ],
  "versions": [
    {
      "downloads": [
        {
          "link": "https://www.patreon.com/posts/v0-25-dev-is-out-111279497",
          "name": "patreon.com",
          "note": "",
        },
      ],
      "version": "v0.25 dev release",
    },
    {
      "downloads": [
        {
          "link": "https://www.patreon.com/posts/v0-24-is-out-for-111152028",
          "name": "patreon.com",
          "note": "",
        },
      ],
      "version": "v0.24 disrupted",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/vE6YmZgr",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "v0.23 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/HScXQ2h3",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "v0.22 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/tu83EWCq",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "v0.21 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/c2yKuh2m",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "v0.20 public",
    },
    {
      "downloads": [
        {
          "link": "https://gofile.io/d/Mp5lhQ",
          "name": "gofile.io",
          "note": "",
        },
      ],
      "version": "v0.19 public",
    },
    {
      "downloads": [
        {
          "link": "https://gofile.io/d/X1OnBZ",
          "name": "gofile.io",
          "note": "",
        },
      ],
      "version": "v0.18 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/USgAJ4Mz",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "v0.17 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/mws67nYP",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "v0.16 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/wdcoBNc5",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "v0.15 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/53YSge2F",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "v0.14 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/AyH2HA2F",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "v0.13 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/a9SY1g4V",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "v0.12 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/8xfPiaPK",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "v0.11 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/VV3o6QnU",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "v0.10 public",
    },
    {
      "downloads": [
        {
          "link": "https://mega.nz/file/NvEmRRyA#KF_RE_aeXy6UZBAXFwpzS6SgATh_7HQ1mOgJjYV-514",
          "name": "mega.nz",
          "note": "",
        },
      ],
      "version": "v0.9 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/D6erAHFW",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "0.8 public",
    },
    {
      "downloads": [
        {
          "link": "https://mega.nz/file/o6d23ZTQ#uKMEgIuqml_5F0ZuA9zJOL0CUlh4CMcWasXPHpeaJGk",
          "name": "mega.nz",
          "note": "",
        },
      ],
      "version": "0.7 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/iu7JbfJh",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "0.6.1 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/W7cPtgE5",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "0.6 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/cja5U3UA",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "0.5 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/kz7btn5h",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "0.4 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/BmbcgsoA",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "0.3 public",
    },
    {
      "downloads": [
        {
          "link": "https://pixeldrain.com/u/PKffqkvV",
          "name": "pixeldrain.com",
          "note": "",
        },
      ],
      "version": "0.2",
    },
  ],
}
`;
